removed unnecessary values

--- a/src/main/resources/templates/books/books.html
+++ b/src/main/resources/templates/books/books.html
@@ -16,9 +16,9 @@
         </thead>
         <tbody>
             <tr th:each="book : ${books}">
-                <td th:text="${book.title}">Name</td>
-                <td th:text="${book.author}">Author</td>
-                <td th:text="${book.published}">Published</td>
+                <td th:text="${book.title}"/>
+                <td th:text="${book.author}"/>
+                <td th:text="${book.published}"/>
                 <td><a th:href="@{/book/delete/{id}(id=${book.id})}">delete</a></td>
                 <td><a th:href="@{/book/edit/{id}(id=${book.id})}">edit</a></td>
             </tr>
